# poginfo_scraper

./: .env sample  Dockerfile  README.md  app.py  compose.yml  docker-compose.yml  pyproject.toml  serverless.yml
.github/workflows/: lambda-deploy.yml
app/application/services/: race_info_service.py  race_result_service.py
app/application/use_cases/: fetch_race_info.py  fetch_race_result.py
app/domain/entities/: race_info.py  race_result.py
app/domain/repositories/: race_info_repository.py
app/infrastructure/repositories/: pog_info_scraper_repository.py
app/infrastructure/scraper/: pog_info_scraper.py
app/infrastructure/services/: discord_service.py
app/presentation/cloud_run/: info_handler.py  result_handler.py
app/presentation/debug/: info_main.py  result_main.py
src/: app.py  pog_info_scraper.py
