[tool.poetry]
name = "poginfo-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poginfo_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
selenium = "4.9.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
